<resources>
    <string name="app_name">Accounting Scrapbook</string>
    <string name="app_website">openlab.ncl.ac.uk/accounting-scrapbook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Common Interface elements -->
    <string name="create_scrap_date_label">On what date was the activity?</string>
    <string name="create_scrap_scrapbooks_button">Select Scrapbooks</string>
    <string name="create_scrap_tags_label">Add some Tags (Optional -- items get tagged with scrapbook tags automatically)</string>
    <string name="create_scrap_tags_hint">(Tags should be separated by commas)</string>
    <string name="create_scrap_done_button">Done</string>
    <string name="title_activity_view_scrapbook">ViewScrapbookActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="scrapcard_tag_label">Tags:</string>


    <!-- Manage connected services activity -->
    <string name="text_manage_services">Here you can add services to share your data with, add the address of the service and data will be sent there every time you hit the share button on the app. Your service should tell you what address or url to enter here, and may provide you with an \"Api Key\" to add as well. You can copy this over.</string>
    <string name="manage_services_add_button">Add Manually</string>
    <string name="manage_services_api_key_hint">If you have an API Key for this service, paste it here</string>
    <string name="manage_services_url_prefix">https://</string>
    <string name="manage_services_add_by_qr_button">Scan Code</string>
    <string name="text_request_install_scanner_dialog_title">We need a QR Scanner installed</string>
    <string name="text_request_install_scanner_dialog_body">Hey there, dreadfully sorry but to scan a QR code you need an app installed. Click ok to proceed, or you can add the code manually.</string>


    <!-- Options for the spinner in ViewScrapbook to filter items -->
    <string name="scrapbook_filter_prompt">What type of item to show?</string>
    <string-array name="scrapbook_filters_arrays">
        <item>All</item>
        <item>Photographs</item>
        <item>Spends</item>
        <item>Quotes</item>
        <item>Activities</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- Lorem Ipsum-->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <!-- View Scrapbook-->
    <string name="view_scrapbook_total">Items</string>
    <string name="view_scrapbook_filter_label">Filter by type:</string>

    <string name="snackbar_removed_item">Removed item from Scrapbook</string>

    <string name="button_choose_scrapbooks">Choose Scrapbooks</string>
    <string name="button_generate_accounts">Generate</string>
    <string name="button_share_accounts">Share</string>
    <string name="button_choose_photo">Choose Image</string>
    <string name="button_pick_place">Pick a Place</string>
    <string name="button_share_data">Share</string>

    <!-- Qualitative Account id string format -->
    <string name="qualitative_accounting_id_format" formatted="false">accountability-scrapbook_%s_%s</string>

    <!-- On-screen instructions for email accounts etc -->
    <string name="email_accounts_text">This screen allows you to generate records for use in your budget software. Select your Scrapbooks below, and hit the button. This will go through each scrapbook, find all the spends, and then generate a CSV file which you can then share via services such as email or Dropbox. This file can be imported, or copied, to software such Libreoffice Calc, Microsoft Excel, or Sage Accounts (among others).</string>


    <!--Activity: Share-->
    <string name="text_share_introduction">This screen allows you to share your data with the services you\'ve added. Select your Scrapbooks, then use the buttons to share to whichever services you wish. This will then share all of the data to that service.</string>

    <!--Activity: Archive-->
    <string name="text_archive_introduction">This is the archive. When an item is no longer in any scrapbooks it is kept here in case you change your mind. Tap an item to choose some scrapbooks again, if you want.</string>
</resources>
