<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_email_accounts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.mrshll.matt.accountabilityscrapbook.EmailAccountsActivity">

    <TextView
        android:id="@+id/generate_accounts_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_accounts_text"
        />

    <Button
        android:id="@+id/generate_accounts_scrapbook_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/generate_accounts_text"
        android:text="@string/button_choose_scrapbooks"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/generate_accounts_generate_button"
        android:layout_width="wrap_content"
        android:text="@string/button_generate_accounts"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_spreadsheet_with_sum_symbol"
        android:layout_below="@+id/generate_accounts_scrapbook_button"
        />

    <Button
        android:id="@+id/generate_accounts_share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/generate_accounts_generate_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_alignParentRight="true"
        android:text="@string/button_share_accounts"
        android:drawableLeft="@drawable/ic_menu_share"
        android:drawableTint="@color/colorOffWhite"


        />

</RelativeLayout>
