<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/create_scrap_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_scrap_date_label"

        />

    <DatePicker
        android:id="@+id/create_scrap_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:layout_below="@+id/create_scrap_date_label"
        android:layout_marginTop="10dp"
        ></DatePicker>

    <Button
        android:id="@+id/create_scrap_scrapbook_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_scrap_date_picker"
        android:text="@string/create_scrap_scrapbooks_button"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/create_scrap_tags_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_scrap_scrapbook_button"
        android:layout_marginTop="10dp"
        android:text="@string/create_scrap_tags_label"

        />

    <LinearLayout
        android:id="@+id/tagsLinearLayout"
        android:layout_below="@id/create_scrap_tags_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                              android:id="@+id/autocomplete_tags"
                              android:layout_width="0dp"
                              android:layout_weight="1"
                              android:layout_height="wrap_content"
                              android:layout_below="@id/create_scrap_tags_label"
            />

        <Button
            android:id="@+id/addTagFieldButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Add"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/currentTagsLabel"
        android:layout_below="@+id/tagsLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current Tags:"/>

    <TextView
        android:id="@+id/currentTagsField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLinkBlue"
        android:layout_below="@id/currentTagsLabel"
        android:text="No custom tags yet!"
        android:layout_centerHorizontal="true"

        />




    <Button
        android:text="@string/create_scrap_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_scrap_done"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_below="@+id/currentTagsField"
         />

</RelativeLayout>